--- a/Nilai with keyevent/Muhammadnawfal_nilai_with_keyevent.html
+++ b/Nilai with keyevent/Muhammadnawfal_nilai_with_keyevent.html
@@ -40,7 +40,8 @@
     <tr>
         <td>Tugas</td>
         <td>20%</td>
-        <td><input class="w-full px-2 rounded-md" min="0" max="100" type="number" name="tugas" id="tugas"
+       <!--onekeyup untuk menangani event keyup-->
+     <td><input class="w-full px-2 rounded-md" min="0" max="100" type="number" name="tugas" id="tugas"
                    onkeyup="calculate()" placeholder="masukkan nilai"></td>
     </tr>
     <tr>
